- finally fixed filtering of duplicate characters - added totalAmount fetched internally (currently only displaying in console) - fixed broken style on share page in chrome

--- a/src/style.css
+++ b/src/style.css
@@ -191,6 +191,10 @@ a.tag {
   flex-direction: column;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .smallerOverlay > * {
   display: flex;
 }
